@@ -1,14 +1,16 @@
 package hex;
 
-import water.*;
-import water.fvec.*;
-import water.util.ArrayUtils;
-import water.util.MathUtils;
-
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
+
+import org.joda.time.DateTime;
+
+import water.*;
+import water.fvec.*;
+import water.util.*;
+import hex.genmodel.GenModel;
 
 /**
  * A Model models reality (hopefully).
@@ -35,7 +37,7 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
     DimReduction
   }
 
-  public boolean isSupervised() { return false; }
+  public final boolean isSupervised() { return _output.isSupervised(); }
 
   /** Model-specific parameter class.  Each model sub-class contains an
    *  instance of one of these containing its builder parameters, with
@@ -209,14 +211,6 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
      *  ModelBuilder. */
     public Job.JobState _state;
 
-    /** The start time in mS since the epoch for model training, again this
-     *  comes from the Job which needs to split from ModelBuilder.  */
-    public long _training_start_time = 0L;
-
-    /** The duration in mS for model training, again this comes from the Job
-     *  which needs to split from ModelBuilder.  */
-    public long _training_duration_in_ms = 0L;
-
     /** Any final prep-work just before model-building starts, but after the
      *  user has clicked "go".  E.g., converting a response column to an enum
      *  touches the entire column (can be expensive), makes a parallel vec
@@ -230,15 +224,15 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
       _domains= b._train.domains();
     }
 
-    /** The names of all the columns, including the response column (which comes last). */
-    public String[] allNames() { return _names; }
+    public boolean isSupervised() { return false; }
     /** The name of the response column (which is always the last column). */
     public String responseName() { return (getModelCategory() == ModelCategory.Regression || isClassifier()) ?  _names[  _names.length-1] : null; }
     /** The names of the levels for an enum (categorical) response column. */
-    public String[] classNames() { return _domains[_domains.length-1]; }
+    public String[] classNames() { assert isSupervised(); return _domains[_domains.length-1]; }
     /** Is this model a classification model? (v. a regression or clustering model) */
-    public boolean isClassifier() { return classNames() != null ; }
+    public boolean isClassifier() { return isSupervised() && classNames() != null ; }
     public int nclasses() {
+      assert isSupervised();
       String cns[] = classNames();
       return cns==null ? 1 : cns.length;
     }
@@ -252,8 +246,8 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
 
     // TODO: Needs to be Atomic update, not just synchronized
     public synchronized ModelMetrics addModelMetrics(ModelMetrics mm) {
-      for( int i=0; i<_model_metrics.length; i++ ) // Dup removal
-        if( _model_metrics[i]==mm._key ) return mm;
+      for( Key key : _model_metrics ) // Dup removal
+        if( key==mm._key ) return mm;
       _model_metrics = Arrays.copyOf(_model_metrics, _model_metrics.length + 1);
       _model_metrics[_model_metrics.length - 1] = mm._key;
       return mm;                // Flow coding
@@ -460,7 +454,7 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
    *  already adapted to the Model's domain, so the output is also.  Also
    *  computes the metrics for this frame.
    *
-   * @param adaptFrm
+   * @param adaptFrm Already adapted frame
    * @return A Frame containing the prediction column, and class distribution
    */
   protected Frame scoreImpl(Frame fr, Frame adaptFrm, String destination_key) {
@@ -536,4 +530,151 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
   }
 
   @Override protected long checksum_impl() { return _parms.checksum_impl() * _output.checksum_impl(); }
+
+  // ==========================================================================
+  /** Return a String which is a valid Java program representing a class that
+   *  implements the Model.  The Java is of the form:
+   *  <pre>
+   *    class UUIDxxxxModel {
+   *      public static final String NAMES[] = { ....column names... }
+   *      public static final String DOMAINS[][] = { ....domain names... }
+   *      // Pass in data in a double[], pre-aligned to the Model's requirements.
+   *      // Jam predictions into the preds[] array; preds[0] is reserved for the
+   *      // main prediction (class for classifiers or value for regression),
+   *      // and remaining columns hold a probability distribution for classifiers.
+   *      float[] predict( double data[], float preds[] );
+   *      double[] map( HashMap &lt; String,Double &gt; row, double data[] );
+   *      // Does the mapping lookup for every row, no allocation
+   *      float[] predict( HashMap &lt; String,Double &gt; row, double data[], float preds[] );
+   *      // Allocates a double[] for every row
+   *      float[] predict( HashMap &lt; String,Double &gt; row, float preds[] );
+   *      // Allocates a double[] and a float[] for every row
+   *      float[] predict( HashMap &lt; String,Double &gt; row );
+   *    }
+   *  </pre>
+   */
+  public final String toJava() { return toJava(new SB()).toString(); }
+  public SB toJava( SB sb ) {
+    SB fileContextSB = new SB(); // preserve file context
+    String modelName = JCodeGen.toJavaId(_key.toString());
+    // HEADER
+    sb.p("import java.util.Map;").nl();
+    sb.p("// AUTOGENERATED BY H2O at ").p(new DateTime().toString()).nl();
+    sb.p("// ").p(H2O.ABV.projectVersion()).nl();
+    sb.p("//").nl();
+    sb.p("// Standalone prediction code with sample test data for ").p(this.getClass().getSimpleName()).p(" named ").p(modelName).nl();
+    sb.p("//").nl();
+    sb.p("// How to download, compile and execute:").nl();
+    sb.p("//     mkdir tmpdir").nl();
+    sb.p("//     cd tmpdir").nl();
+    sb.p("//     curl http:/").p(H2O.SELF.toString()).p("/h2o-model.jar > h2o-model.jar").nl();
+    sb.p("//     curl http:/").p(H2O.SELF.toString()).p("/2/").p(this.getClass().getSimpleName()).p("View.java?_modelKey=").pobj(_key).p(" > ").p(modelName).p(".java").nl();
+    sb.p("//     javac -cp h2o-model.jar -J-Xmx2g -J-XX:MaxPermSize=128m ").p(modelName).p(".java").nl();
+    sb.p("//     java -cp h2o-model.jar:. -Xmx2g -XX:MaxPermSize=256m -XX:ReservedCodeCacheSize=256m ").p(modelName).nl();
+    sb.p("//").nl();
+    sb.p("//     (Note:  Try java argument -XX:+PrintCompilation to show runtime JIT compiler behavior.)").nl();
+    sb.nl();
+    sb.p("public class ").p(modelName).p(" extends hex.genmodel.GenModel {").nl().ii(1);
+    toJavaInit(sb, fileContextSB).nl();
+    toJavaNAMES(sb);
+    toJavaNCLASSES(sb);
+    toJavaDOMAINS(sb, fileContextSB);
+    toJavaPROB(sb);
+    toJavaSuper(modelName,sb); //
+    toJavaPredict(sb, fileContextSB);
+    sb.p("}").nl().di(1);
+    sb.p(fileContextSB).nl(); // Append file
+    return sb;
+  }
+  /** Generate implementation for super class. */
+  protected SB toJavaSuper( String modelName, SB sb ) {
+    return sb.nl().ip("public "+modelName+"() { super(NAMES,DOMAINS); }").nl();
+  }
+  private SB toJavaNAMES( SB sb ) { return JCodeGen.toStaticVar(sb, "NAMES", _output._names, "Names of columns used by model."); }
+  protected SB toJavaNCLASSES( SB sb ) { return _output.isClassifier() ? JCodeGen.toStaticVar(sb, "NCLASSES", _output.nclasses(), "Number of output classes included in training data response column.") : sb; }
+  private SB toJavaDOMAINS( SB sb, SB fileContextSB ) {
+    sb.nl();
+    sb.ip("// Column domains. The last array contains domain of response column.").nl();
+    sb.ip("public static final String[][] DOMAINS = new String[][] {").nl();
+    for (int i=0; i<_output._domains.length; i++) {
+      String[] dom = _output._domains[i];
+      String colInfoClazz = "ColInfo_"+i;
+      sb.i(1).p("/* ").p(_output._names[i]).p(" */ ");
+      sb.p(colInfoClazz).p(".VALUES");
+      if (i!=_output._domains.length-1) sb.p(',');
+      sb.nl();
+      fileContextSB.ip("// The class representing column ").p(_output._names[i]).nl();
+      JCodeGen.toClassWithArray(fileContextSB, null, colInfoClazz, dom);
+    }
+    return sb.ip("};").nl();
+  }
+  protected SB toJavaPROB( SB sb) { return sb; }
+  // Override in subclasses to provide some top-level model-specific goodness
+  protected SB toJavaInit(SB sb, SB fileContextSB) { return sb; }
+  // Override in subclasses to provide some inside 'predict' call goodness
+  // Method returns code which should be appended into generated top level class after
+  // predict method.
+  protected void toJavaPredictBody(SB bodySb, SB classCtxSb, SB fileCtxSb) {
+    throw new IllegalArgumentException("This model type does not support conversion to Java");
+  }
+  // Wrapper around the main predict call, including the signature and return value
+  private SB toJavaPredict(SB ccsb, SB fileCtxSb) { // ccsb = classContext
+    ccsb.nl();
+    ccsb.ip("// Pass in data in a double[], pre-aligned to the Model's requirements.").nl();
+    ccsb.ip("// Jam predictions into the preds[] array; preds[0] is reserved for the").nl();
+    ccsb.ip("// main prediction (class for classifiers or value for regression),").nl();
+    ccsb.ip("// and remaining columns hold a probability distribution for classifiers.").nl();
+    ccsb.ip("public final float[] score0( double[] data, float[] preds ) {").nl();
+    SB classCtxSb = new SB().ii(1);
+    toJavaPredictBody(ccsb.ii(1), classCtxSb, fileCtxSb);
+    ccsb.ip("return preds;").nl();
+    ccsb.di(1).ip("}").nl();
+    ccsb.p(classCtxSb);
+    return ccsb;
+  }
+
+  // Convenience method for testing: build Java, convert it to a class &
+  // execute it: compare the results of the new class's (JIT'd) scoring with
+  // the built-in (interpreted) scoring on this dataset.  Throws if there
+  // is any error (typically an AssertionError).
+  public boolean testJavaScoring( Frame data, Frame model_predictions ) {
+    assert data.numRows()==model_predictions.numRows();
+    String modelName = JCodeGen.toJavaId(_key.toString());
+    String java_text = toJava();
+    GenModel genmodel;
+    try { 
+      Class clz = JCodeGen.compile(modelName,java_text);
+      genmodel = (GenModel)clz.newInstance(); 
+    } catch( Exception e ) { throw H2O.fail("Internal POJO compilation failed",e); }
+
+    Vec[] dvecs = data.vecs();
+    Vec[] pvecs = model_predictions.vecs();
+    boolean good = true;
+    for( int i=0; i<genmodel._names.length; i++ ) {
+      if( !data._names[i].equals(genmodel._names[i]) ) {
+        System.err.println("Column names not equal; dataset: "+data._names[i]+" model expects: "+genmodel._names[i]);
+        good = false;
+      }
+      if( !Arrays.equals(dvecs[i].domain(),genmodel._domains[i]) ) {
+        System.err.println("Column domains not equal for: "+data._names[i]);
+        good = false;
+      }
+    }
+    if( !good ) return false;
+    
+    double features[] = MemoryManager.malloc8d(genmodel._names.length);
+    float predictions[] = MemoryManager.malloc4f(genmodel.nclasses()+1);
+
+    for( int row=0; row<data.numRows(); row++ ) {
+      for( int col=0; col<features.length; col++ )
+        features[col] = dvecs[col].at(row);
+      genmodel.score0(features,predictions);
+      for( int col=0; col<predictions.length; col++ )
+        if( predictions[col] != pvecs[col].at(row) ) {
+          System.out.println("Predictions mismatch, row "+row+", col "+model_predictions._names[col]+", internal prediction="+pvecs[col].at(row)+", POJO prediction="+predictions[col]);
+          good = false;
+        }
+    }
+    return good;
+  }
 }
